--- a/FRONT/src/app/components/admin-menu/admin-menu.component.html
+++ b/FRONT/src/app/components/admin-menu/admin-menu.component.html
@@ -13,14 +13,14 @@
         <a class="nav-link waves-light" mdbWavesEffect>BSEP-2023</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','citizen-home']" mdbWavesEffect>
+        <a class="nav-link waves-light" [routerLink]="['/','admin-home']" mdbWavesEffect>
           <button class="nav-item" style="border: 0;background-color: #e66565;color: white;"
             type="button">Home</button></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','trademark']" mdbWavesEffect> <button class="nav-item"
-            style="border: 0;background-color: #e66565;color: white;" type="button">Trademark</button></a>
+        <a class="nav-link waves-light" [routerLink]="['/','admin-csr']" mdbWavesEffect> <button class="nav-item"
+            style="border: 0;background-color: #e66565;color: white;" type="button">CSR</button></a>
       </li>
 
 
