Create and view all certificates is finished.

--- a/FRONT/src/app/components/tenant-menu/tenant-menu.component.html
+++ b/FRONT/src/app/components/tenant-menu/tenant-menu.component.html
@@ -28,11 +28,11 @@
     </ul>
     <!-- Links -->
 
-    <ul class="navbar-nav ml-auto nav-flex-icons">
+    <ul class="navbar-nav ml-auto nav-flex-icons" style="position: absolute; right: 1em;">
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/','login']">
-          <button class="nav-item" style="border: 0;background-color: #934ceb;color: white;margin-left:1070px;"
-            type="button"><i (click)="logout()" class="fa fa-sign-out  fa-2x" aria-hidden="true"></i></button>
+          <button class="nav-item" style="border: 0;background-color: #934ceb;color: white;" type="button"><i
+              (click)="logout()" class="fa fa-sign-out  fa-2x" aria-hidden="true"></i></button>
         </a>
       </li>
 
