--- a/FRONT/src/app/components/admin-menu/admin-menu.component.html
+++ b/FRONT/src/app/components/admin-menu/admin-menu.component.html
@@ -23,16 +23,20 @@
             style="border: 0;background-color: #e66565;color: white;" type="button">CSR</button></a>
       </li>
 
-
+      <li class="nav-item">
+        <a class="nav-link waves-light" [routerLink]="['/','admin-certificate']" mdbWavesEffect> <button
+            class="nav-item" style="border: 0;background-color: #e66565;color: white;"
+            type="button">CERTIFICATE</button></a>
+      </li>
 
     </ul>
     <!-- Links -->
 
-    <ul class="navbar-nav ml-auto nav-flex-icons">
+    <ul class="navbar-nav ml-auto nav-flex-icons" style="position: absolute; right: 1em;">
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/','login']">
-          <button class="nav-item" style="border: 0;background-color: #e66565;color: white;margin-left:1100px;"
-            type="button"><i (click)="logout()" class="fa fa-sign-out  fa-2x" aria-hidden="true"></i></button>
+          <button class="nav-item" style="border: 0;background-color: #e66565;color: white;" type="button"><i
+              (click)="logout()" class="fa fa-sign-out  fa-2x" aria-hidden="true"></i></button>
         </a>
       </li>
 
