--- a/FRONT/src/app/components/admin-certificates/admin-certificates.component.html
+++ b/FRONT/src/app/components/admin-certificates/admin-certificates.component.html
@@ -43,7 +43,15 @@
   <ng-container matColumnDef="Delete">
     <th mat-header-cell *matHeaderCellDef>Delete </th>
     <td mat-cell *matCellDef="let element">
-      <button style="color: white;" (click)="deleteCertificate(element.id)" class="btn btn-danger">Delete</button>
+      <button style="color: white;" (click)="deleteCertificate(element.id)" class="btn btn-warning">Delete</button>
+
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Revoke">
+    <th mat-header-cell *matHeaderCellDef>Revoke </th>
+    <td mat-cell *matCellDef="let element">
+      <button style="color: white;" (click)="revokeCertificate(element.id)" class="btn btn-danger">Revoke</button>
 
     </td>
   </ng-container>
@@ -51,7 +59,7 @@
   <ng-container matColumnDef="Validate">
     <th mat-header-cell *matHeaderCellDef>Validate </th>
     <td mat-cell *matCellDef="let element">
-      <button style="color: white;" (click)="validateCertificate(element.id)" class="btn btn-warning">Validate</button>
+      <button style="color: white;" (click)="validateCertificate(element.id)" class="btn btn-success">Validate</button>
 
     </td>
   </ng-container>
