--- a/FRONT/src/app/components/admin-certificates/admin-certificates.component.html
+++ b/FRONT/src/app/components/admin-certificates/admin-certificates.component.html
@@ -11,16 +11,15 @@
     <th mat-header-cell *matHeaderCellDef>
       issuer
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.issuer}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.issuer)">
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="subject">
     <th mat-header-cell *matHeaderCellDef>
       subject
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.subject}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.subject)"> </td>
   </ng-container>
 
   <!-- endAction Column -->
@@ -28,30 +27,28 @@
     <th mat-header-cell *matHeaderCellDef>
       validityStart
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.validityStart}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.validityStart)"> </td>
   </ng-container>
   <!-- endAction Column -->
   <ng-container matColumnDef="validityPeriod">
     <th mat-header-cell *matHeaderCellDef>
       validityPeriod
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.validityPeriod}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.validityPeriod)"></td>
   </ng-container>
 
   <ng-container matColumnDef="template">
     <th mat-header-cell *matHeaderCellDef>
       template
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.template}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.template)"> </td>
   </ng-container>
 
   <ng-container matColumnDef="Delete">
     <th mat-header-cell *matHeaderCellDef>Delete </th>
     <td mat-cell *matCellDef="let element">
-      <button style="color: white;" (click)="deleteCertificate(element.id)" class="btn btn-warning">Delete</button>
+      <button style="color: white;" (click)="deleteCertificate(element.id)" class="btn btn-warning"
+        [innerHTML]="sanitizer.bypassSecurityTrustHtml('Delete')"></button>
 
     </td>
   </ng-container>
@@ -59,7 +56,8 @@
   <ng-container matColumnDef="Revoke">
     <th mat-header-cell *matHeaderCellDef>Revoke </th>
     <td mat-cell *matCellDef="let element">
-      <button style="color: white;" (click)="revokeCertificate(element.id)" class="btn btn-danger">Revoke</button>
+      <button style="color: white;" (click)="revokeCertificate(element.id)" class="btn btn-danger"
+        [innerHTML]="sanitizer.bypassSecurityTrustHtml('Revoke')"></button>
 
     </td>
   </ng-container>
@@ -67,7 +65,8 @@
   <ng-container matColumnDef="Validate">
     <th mat-header-cell *matHeaderCellDef>Validate </th>
     <td mat-cell *matCellDef="let element">
-      <button style="color: white;" (click)="validateCertificate(element.id)" class="btn btn-success">Validate</button>
+      <button style="color: white;" (click)="validateCertificate(element.id)" class="btn btn-success"
+        [innerHTML]="sanitizer.bypassSecurityTrustHtml('Validate')"></button>
 
     </td>
   </ng-container>
