--- a/FRONT/src/app/components/admin-csr/admin-csr.component.html
+++ b/FRONT/src/app/components/admin-csr/admin-csr.component.html
@@ -11,8 +11,7 @@
     <th mat-header-cell *matHeaderCellDef>
       username
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.username}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.username)"></td>
   </ng-container>
 
   <!-- endAction Column -->
@@ -20,32 +19,29 @@
     <th mat-header-cell *matHeaderCellDef>
       validityStart
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.validityStart}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.validityStart)"> </td>
   </ng-container>
   <!-- endAction Column -->
   <ng-container matColumnDef="validityPeriod">
     <th mat-header-cell *matHeaderCellDef>
       validityPeriod
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.validityPeriod}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.validityPeriod)">
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="serialNumber">
     <th mat-header-cell *matHeaderCellDef>
       serialNumber
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.serialNumber}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.serialNumber)"></td>
   </ng-container>
 
   <ng-container matColumnDef="template">
     <th mat-header-cell *matHeaderCellDef>
       template
     </th>
-    <td mat-cell *matCellDef="let element">
-      {{element.template}} </td>
+    <td mat-cell *matCellDef="let element" [innerHTML]="sanitizer.bypassSecurityTrustHtml(element.template)"> </td>
   </ng-container>
 
   <!-- <ng-container matColumnDef="commonName">
@@ -102,7 +98,8 @@
   <ng-container matColumnDef="Accept">
     <th mat-header-cell *matHeaderCellDef>Accept </th>
     <td mat-cell *matCellDef="let element">
-      <button style="color: white;" (click)="acceptCSR(element.id)" class="btn btn-success">Accept</button>
+      <button style="color: white;" (click)="acceptCSR(element.id)" class="btn btn-success"
+        [innerHTML]="sanitizer.bypassSecurityTrustHtml('Accept')"></button>
 
     </td>
   </ng-container>
@@ -110,7 +107,8 @@
   <ng-container matColumnDef="Delete">
     <th mat-header-cell *matHeaderCellDef>Delete </th>
     <td mat-cell *matCellDef="let element">
-      <button style="color: white;" (click)="deleteCSR(element.id)" class="btn btn-danger">Delete</button>
+      <button style="color: white;" (click)="deleteCSR(element.id)" class="btn btn-danger"
+        [innerHTML]="sanitizer.bypassSecurityTrustHtml('Delete')"></button>
 
     </td>
   </ng-container>
