--- a/FRONT/src/app/components/admin-menu/admin-menu.component.html
+++ b/FRONT/src/app/components/admin-menu/admin-menu.component.html
@@ -29,6 +29,11 @@
             type="button">CERTIFICATE</button></a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link waves-light" [routerLink]="['/','admin-users']" mdbWavesEffect> <button class="nav-item"
+            style="border: 0;background-color: #e66565;color: white;" type="button">USERS</button></a>
+      </li>
+
     </ul>
     <!-- Links -->
 
