--- a/FRONT/src/app/components/login/login.component.html
+++ b/FRONT/src/app/components/login/login.component.html
@@ -11,6 +11,21 @@
       <label for="exampleInputPassword" class="form-label">Password</label>
       <input type="password" formControlName="password" class="form-control" id="exampleInputPassword">
     </div>
+
+    <div class="mb-3">
+      <label for="exampleInputPin" class="form-label">Pin</label>
+      <input type="text" formControlName="pin" class="form-control" id="exampleInputPin">
+    </div>
+
+    <div class="form-group">
+      <label for="exampleFormControlSelect2">SELECT ROLE</label>
+      <select formControlName="role" class="form-control" id="exampleFormControlSelect2">
+        <option>ROLE_OWNER</option>
+        <option>ROLE_TENANT</option>
+        <option>ROLE_ADMIN</option>
+      </select>
+    </div>
+
     <button type="submit" class="btn btn-primary" (click)="login()" style="margin-top: 1em;">Login</button>
   </form>
 
