--- a/FRONT/src/app/components/register-csr-form/register-csr-form.component.html
+++ b/FRONT/src/app/components/register-csr-form/register-csr-form.component.html
@@ -13,6 +13,10 @@
       <input type="password" formControlName="password" class="form-control" id="exampleInputPassword">
     </div>
     <div class="mb-3">
+      <label for="exampleInputPin" class="form-label">Pin</label>
+      <input type="text" formControlName="pin" class="form-control" id="exampleInputPin">
+    </div>
+    <div class="mb-3">
       <label for="exampleInputName" class="form-label">Name</label>
       <input type="text" formControlName="name" class="form-control" id="exampleInputName">
     </div>
