HOME and DEVICE APP FINISHED. ALARM ADDED.

--- a/FRONT/src/app/components/admin-menu/admin-menu.component.html
+++ b/FRONT/src/app/components/admin-menu/admin-menu.component.html
@@ -34,6 +34,11 @@
             style="border: 0;background-color: #e66565;color: white;" type="button">USERS</button></a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link waves-light" [routerLink]="['/','admin-message']" mdbWavesEffect> <button class="nav-item"
+            style="border: 0;background-color: #e66565;color: white;" type="button">MESSAGE</button></a>
+      </li>
+
     </ul>
     <!-- Links -->
 
