--- a/FRONT/src/app/components/owner-menu/owner-menu.component.html
+++ b/FRONT/src/app/components/owner-menu/owner-menu.component.html
@@ -13,14 +13,14 @@
         <a class="nav-link waves-light" mdbWavesEffect>BSEP-2023</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','citizen-home']" mdbWavesEffect>
+        <a class="nav-link waves-light" [routerLink]="['/','owner-home']" mdbWavesEffect>
           <button class="nav-item" style="border: 0;background-color: #5e72d9;color: white;"
             type="button">Home</button></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','trademark']" mdbWavesEffect> <button class="nav-item"
-            style="border: 0;background-color: #5e72d9;color: white;" type="button">Trademark</button></a>
+        <a class="nav-link waves-light" [routerLink]="['/','owner-message']" mdbWavesEffect> <button class="nav-item"
+            style="border: 0;background-color: #5e72d9;color: white;" type="button">MESSAGE</button></a>
       </li>
 
 
