--- a/FRONT/src/app/components/tenant-menu/tenant-menu.component.html
+++ b/FRONT/src/app/components/tenant-menu/tenant-menu.component.html
@@ -13,14 +13,14 @@
         <a class="nav-link waves-light" style="width: 100px;" mdbWavesEffect>BSEP-2023</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','citizen-home']" mdbWavesEffect>
+        <a class="nav-link waves-light" [routerLink]="['/','tenant-home']" mdbWavesEffect>
           <button class="nav-item" style="border: 0;background-color: #934ceb;color: white;"
             type="button">Home</button></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link waves-light" [routerLink]="['/','trademark']" mdbWavesEffect> <button class="nav-item"
-            style="border: 0;background-color: #934ceb;color: white;" type="button">Trademark</button></a>
+        <a class="nav-link waves-light" [routerLink]="['/','tenant-message']" mdbWavesEffect> <button class="nav-item"
+            style="border: 0;background-color: #934ceb;color: white;" type="button">MESSAGE</button></a>
       </li>
 
 
